fix load_dotenv from parent folder

--- a/ChatWithDatabase/SQL-Agent.ipynb
+++ b/ChatWithDatabase/SQL-Agent.ipynb
@@ -17,8 +17,12 @@
     }
    ],
    "source": [
+    "from pprint import pprint\n",
+    "from pathlib import Path\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "\n",
+    "# load openai api key\n",
+    "load_dotenv(Path().cwd().parent / '.env')"
    ]
   },
   {
