--- a/ChatWithDatabase/SQL-Agent.ipynb
+++ b/ChatWithDatabase/SQL-Agent.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-16k\", temperature=0, max_tokens=None)"
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-16k\", temperature=0)"
    ]
   },
   {
